tests/java5/generics/decp/binary/Asp1.aj
aspect Asp1 {
    declare parents: B* implements I<Integer>; // error
}
